# zero2prod

./: Cargo.toml  Dockerfile  README.md  configuration.yaml  spec.yaml
.github/workflows/: audit-on-push.yml  general.yml  scheduled-audit.yml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20210401181835_create_subscriptions_table.sql  20210718100545_create_subscription_tokens_table.sql
scripts/: init_db.cmd  init_db.ps1  init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
