[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Janno Põldma <janno.poldma@rik.ee>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-rt = "2.2.0"
actix-web = "4.0.0-beta.8"
rand = { version = "0.8", features = ["std_rng"] }
reqwest = { version = "0.11.2", default_features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.125", features = ["derive"] }
tokio = "1.4.0"
config = "0.11.0"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
tracing = { version = "0.1", features = ["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.0"
tracing-log = "0.1.2"
tracing-actix-web = "0.4.0-beta.8"
serde-aux = "2.1.1"
unicode-segmentation = "1.8.0"
validator = "0.14.0"

[dependencies.sqlx]
version = "0.5.5"
default_features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
actix-rt = "2"
claim = "0.5.0"
fake = "2.4.0"
linkify = "0.7.0"
once_cell = "1.8.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.4"
rand_chacha = "0.3.1"
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
